Add setup and run instructions
Added instructions for running the project with JavaFX.